update by query (#65)
* support for update by query or scan

* added license headers

* improved batches, support for flowable arguments

* using MappedTableResource where possible